* Enhanced the dashboard to display artifacts directories as tree structure.
* Added a the cc-config (http://cc-config.sourceforge.net/) application so that it can be included in the dashboard (CC-658). Patch by Allan Wick. 

build loop
======================

build.sh/release.sh scripts
----------------------
* Set JAVA_HOME properly on MacOSX (CC-681). Patch by Ingo Richter

ConcurrentVersionsSystem
----------------------
* Added the ability to set the cvs compression level (CC-579). Patch by Maxim Butov.

CVSBootstrapper
----------------------
* Added the ability to set the cvs compression level (CC-579). Patch by Maxim Butov.

default-plugins
----------------------
* Added darcs to the default plugins (CC-626).

Main
----------------------
* Put the ccname command line parameter back, after being inadvertently removed (CC-651). Patch by Lars Gehrken.

MavenMapper
----------------------
* MavenMapper extracts the email address for a certain committing user as configured in Mavens project.xml or pom.xml (M1 or M2) (CC-618). Contributed by Gisbert Amm.

Project
----------------------
* Added a property named "buildforced" that will get passed to builders for conditional control (CC-653). Patch by Dave Kilroy.

PropertiesMapper
----------------------
* Refactored validation for cleanliness and removing duplication with ValidationHelper (CC-642). Patch by Gisbert Amm.

Schedule
----------------------
* Added trap for zero or less interval and updated docs to indicate that they are not legitimate values (CC-652). Suggested by Jeff Jensen.

TimeBuild
----------------------
* Fixed problem when you set time build to 23:55 and the first modifcationcheck occur at 0:01 you won't get an modification (CC-650). Patch by Lars Gehrken. 

SVN
----------------------
* Set svnrepository property so that it can be used by builders, etc (CC-639). Patch by Brian Egge.

UCM
----------------------